--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -64,3 +64,9 @@ img
   .text-4
     margin-left: 375px
     margin-top: 480px
+  .text-5
+    margin-left: 480px
+    margin-top: 450px
+  .text-6
+    margin-left: 555px
+    margin-top: 450px
