--- a/lokovei-ERP/views/print_order.jade
+++ b/lokovei-ERP/views/print_order.jade
@@ -17,11 +17,16 @@ block content
     });
 
   img(src="/output.png")
+  - var d = new Date()
+  - var dayStr = '中華民國'++' 年 '++' 月 '++' 日';
   .mask
     .text-1= data.pid.substring( data.pid.indexOf('-') + 1, data.pid.length)
     .text-2= data.pSpec
     .text-3= data.pid.substring(0, data.pid.indexOf('-'))
     .text-4= data.carType
+    .text-5= (d.getFullYear()-1911)
+    .text-6= (d.getMonth() + 1)
+    .text-7= d.getUTCDate()
 
   .print
   //-   center
