--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -68,5 +68,8 @@ img
     margin-left: 480px
     margin-top: 450px
   .text-6
+    margin-left: 520px
+    margin-top: 450px
+  .text-6
     margin-left: 555px
     margin-top: 450px
