--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -35,12 +35,13 @@ p
     left: 0px
 
 img
+  z-index: 0
   position: absolute
   top: 30
   left: 200
   margin-left: 200px
   margin-top: -50px
-  width: 880px
+  width: 980px
 
 .mask
   position: absolute
