--- a/lokovei-ERP/views/print_order.jade
+++ b/lokovei-ERP/views/print_order.jade
@@ -27,6 +27,22 @@ block content
     .text-6= d.getMonth()+1
     .text-7= d.getUTCDate()
 
+    .text-8 Polly
+    .text-9= 'CHT-25'
+    .text-10 LTTQ
+    .text-11 北菲棕
+    .text-12 999999-00
+    .text-13 500v
+    .text-14 48v
+    .text-15 25km
+    .text-16 42v
+    .text-17 V
+    .text-18 V
+    .text-19 V
+    .text-20 V
+    .text-21 V
+    .text-22 V
+
   .print
   //-   center
   //-     h1 可愛馬電行車品質檢驗單
