--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -74,3 +74,48 @@ img
   .text-7
     margin-left: 625px
     margin-top: 450px
+  .text-8
+    margin-left: 890px
+    margin-top: 50px
+  .text-9
+    margin-left: 1010px
+    margin-top: 50px
+  .text-10
+    margin-left: 890px
+    margin-top: 80px
+  .text-11
+    margin-left: 1010px
+    margin-top: 80px
+  .text-12
+    margin-left: 960px
+    margin-top: 110px
+  .text-13
+    margin-left: 960px
+    margin-top: 140px
+  .text-14
+    margin-left: 960px
+    margin-top: 170px
+  .text-15
+    margin-left: 960px
+    margin-top: 200px
+  .text-16
+    margin-left: 960px
+    margin-top: 230px
+  .text-17
+    margin-left: 960px
+    margin-top: 260px
+  .text-18
+    margin-left: 960px
+    margin-top: 290px
+  .text-19
+    margin-left: 960px
+    margin-top: 320px
+  .text-20
+    margin-left: 960px
+    margin-top: 350px
+  .text-21
+    margin-left: 960px
+    margin-top: 380px
+  .text-22
+    margin-left: 960px
+    margin-top: 410px
