--- a/lokovei-ERP/asset/stylesheets/print_order.css
+++ b/lokovei-ERP/asset/stylesheets/print_order.css
@@ -114,3 +114,78 @@ img {
   margin-left: 625px;
   margin-top: 450px;
 }
+/* line 77, ../sass/print_order.sass */
+.mask .text-8 {
+  margin-left: 890px;
+  margin-top: 50px;
+}
+/* line 80, ../sass/print_order.sass */
+.mask .text-9 {
+  margin-left: 1010px;
+  margin-top: 50px;
+}
+/* line 83, ../sass/print_order.sass */
+.mask .text-10 {
+  margin-left: 890px;
+  margin-top: 80px;
+}
+/* line 86, ../sass/print_order.sass */
+.mask .text-11 {
+  margin-left: 1010px;
+  margin-top: 80px;
+}
+/* line 89, ../sass/print_order.sass */
+.mask .text-12 {
+  margin-left: 960px;
+  margin-top: 110px;
+}
+/* line 92, ../sass/print_order.sass */
+.mask .text-13 {
+  margin-left: 960px;
+  margin-top: 140px;
+}
+/* line 95, ../sass/print_order.sass */
+.mask .text-14 {
+  margin-left: 960px;
+  margin-top: 170px;
+}
+/* line 98, ../sass/print_order.sass */
+.mask .text-15 {
+  margin-left: 960px;
+  margin-top: 200px;
+}
+/* line 101, ../sass/print_order.sass */
+.mask .text-16 {
+  margin-left: 960px;
+  margin-top: 230px;
+}
+/* line 104, ../sass/print_order.sass */
+.mask .text-17 {
+  margin-left: 960px;
+  margin-top: 260px;
+}
+/* line 107, ../sass/print_order.sass */
+.mask .text-18 {
+  margin-left: 960px;
+  margin-top: 290px;
+}
+/* line 110, ../sass/print_order.sass */
+.mask .text-19 {
+  margin-left: 960px;
+  margin-top: 320px;
+}
+/* line 113, ../sass/print_order.sass */
+.mask .text-20 {
+  margin-left: 960px;
+  margin-top: 350px;
+}
+/* line 116, ../sass/print_order.sass */
+.mask .text-21 {
+  margin-left: 960px;
+  margin-top: 380px;
+}
+/* line 119, ../sass/print_order.sass */
+.mask .text-22 {
+  margin-left: 960px;
+  margin-top: 410px;
+}
