--- a/lokovei-ERP/views/print_order.jade
+++ b/lokovei-ERP/views/print_order.jade
@@ -34,14 +34,15 @@ block content
     .text-12 999999-00
     .text-13 500v
     .text-14 48v
-    .text-15 25km
-    .text-16 42v
-    .text-17 V
+    .text-15= data.battery
+    .text-16 25km
+    .text-17 42v
     .text-18 V
     .text-19 V
     .text-20 V
     .text-21 V
     .text-22 V
+    .text-23 V
 
   .print
   //-   center
