--- a/lokovei-ERP/asset/stylesheets/print_order.css
+++ b/lokovei-ERP/asset/stylesheets/print_order.css
@@ -189,3 +189,8 @@ img {
   margin-left: 960px;
   margin-top: 410px;
 }
+/* line 122, ../sass/print_order.sass */
+.mask .text-22 {
+  margin-left: 960px;
+  margin-top: 440px;
+}
