--- a/lokovei-ERP/views/print_order.jade
+++ b/lokovei-ERP/views/print_order.jade
@@ -28,7 +28,7 @@ block content
     .text-7= d.getUTCDate()
 
     .text-8 Polly
-    .text-9= 'CHT-25'
+    .text-9 CHT-25
     .text-10 LTTQ
     .text-11 北菲棕
     .text-12 999999-00
