--- a/lokovei-ERP/views/print_order.jade
+++ b/lokovei-ERP/views/print_order.jade
@@ -44,7 +44,7 @@ block content
     .text-22 V
     .text-23 V
 
-  .print
+  //- .print
   //-   center
   //-     h1 可愛馬電行車品質檢驗單
   //-   table.table.table-bordered
