--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -57,6 +57,7 @@ img
     margin-left: 255px
     margin-top: 500px
   .text-2
+    font-size: 0.8em
     margin-left: 375px
     margin-top: 500px
   .text-3
