--- a/lokovei-ERP/asset/stylesheets/print_order.css
+++ b/lokovei-ERP/asset/stylesheets/print_order.css
@@ -86,110 +86,111 @@ img {
 }
 /* line 59, ../sass/print_order.sass */
 .mask .text-2 {
+  font-size: 0.8em;
   margin-left: 375px;
   margin-top: 500px;
 }
-/* line 62, ../sass/print_order.sass */
+/* line 63, ../sass/print_order.sass */
 .mask .text-3 {
   margin-left: 255px;
   margin-top: 540px;
 }
-/* line 65, ../sass/print_order.sass */
+/* line 66, ../sass/print_order.sass */
 .mask .text-4 {
   margin-left: 375px;
   margin-top: 540px;
 }
-/* line 68, ../sass/print_order.sass */
+/* line 69, ../sass/print_order.sass */
 .mask .text-5 {
   margin-left: 545px;
   margin-top: 500px;
 }
-/* line 71, ../sass/print_order.sass */
+/* line 72, ../sass/print_order.sass */
 .mask .text-6 {
   margin-left: 600px;
   margin-top: 500px;
 }
-/* line 74, ../sass/print_order.sass */
+/* line 75, ../sass/print_order.sass */
 .mask .text-7 {
   margin-left: 655px;
   margin-top: 500px;
 }
-/* line 77, ../sass/print_order.sass */
+/* line 78, ../sass/print_order.sass */
 .mask .text-8 {
   margin-left: 990px;
   margin-top: 30px;
 }
-/* line 80, ../sass/print_order.sass */
+/* line 81, ../sass/print_order.sass */
 .mask .text-9 {
   margin-left: 1150px;
   margin-top: 30px;
 }
-/* line 83, ../sass/print_order.sass */
+/* line 84, ../sass/print_order.sass */
 .mask .text-10 {
   margin-left: 990px;
   margin-top: 67px;
 }
-/* line 86, ../sass/print_order.sass */
+/* line 87, ../sass/print_order.sass */
 .mask .text-11 {
   margin-left: 1150px;
   margin-top: 67px;
 }
-/* line 89, ../sass/print_order.sass */
+/* line 90, ../sass/print_order.sass */
 .mask .text-12 {
   margin-left: 1100px;
   margin-top: 105px;
 }
-/* line 92, ../sass/print_order.sass */
+/* line 93, ../sass/print_order.sass */
 .mask .text-13 {
   margin-left: 1100px;
   margin-top: 143px;
 }
-/* line 95, ../sass/print_order.sass */
+/* line 96, ../sass/print_order.sass */
 .mask .text-14 {
   margin-left: 1100px;
   margin-top: 180px;
 }
-/* line 98, ../sass/print_order.sass */
+/* line 99, ../sass/print_order.sass */
 .mask .text-15 {
   margin-left: 1100px;
   margin-top: 212px;
 }
-/* line 101, ../sass/print_order.sass */
+/* line 102, ../sass/print_order.sass */
 .mask .text-16 {
   margin-left: 1100px;
   margin-top: 248px;
 }
-/* line 104, ../sass/print_order.sass */
+/* line 105, ../sass/print_order.sass */
 .mask .text-17 {
   margin-left: 1100px;
   margin-top: 285px;
 }
-/* line 107, ../sass/print_order.sass */
+/* line 108, ../sass/print_order.sass */
 .mask .text-18 {
   margin-left: 1100px;
   margin-top: 330px;
 }
-/* line 110, ../sass/print_order.sass */
+/* line 111, ../sass/print_order.sass */
 .mask .text-19 {
   margin-left: 1100px;
   margin-top: 365px;
 }
-/* line 113, ../sass/print_order.sass */
+/* line 114, ../sass/print_order.sass */
 .mask .text-20 {
   margin-left: 1100px;
   margin-top: 400px;
 }
-/* line 116, ../sass/print_order.sass */
+/* line 117, ../sass/print_order.sass */
 .mask .text-21 {
   margin-left: 1100px;
   margin-top: 440px;
 }
-/* line 119, ../sass/print_order.sass */
+/* line 120, ../sass/print_order.sass */
 .mask .text-22 {
   margin-left: 1100px;
   margin-top: 475px;
 }
-/* line 122, ../sass/print_order.sass */
+/* line 123, ../sass/print_order.sass */
 .mask .text-23 {
   margin-left: 1100px;
   margin-top: 515px;
