--- a/lokovei-ERP/views/print_order.jade
+++ b/lokovei-ERP/views/print_order.jade
@@ -38,10 +38,13 @@ block content
       input(type="text" placeholder="車架號碼")
     .text-13
       input(type="text" placeholder="馬達")
-    .text-14 48v
+    .text-14
+      input(type="text" placeholder="控制器規格")
     .text-15= data.battery
-    .text-16 25km
-    .text-17 42v
+    .text-16
+      input(type="text" placeholder="車速數據")
+    .text-17
+      input(type="text" placeholder="欠壓保護值")
     .text-18 V
     .text-19 V
     .text-20 V
