--- a/lokovei-ERP/asset/sass/print_order.sass
+++ b/lokovei-ERP/asset/sass/print_order.sass
@@ -123,3 +123,9 @@ img
   .text-23
     margin-left: 1100px
     margin-top: 515px
+  .text-24
+    margin-left: 270px
+    margin-top: 570px
+  .text-25
+    margin-left: 1180px
+    margin-top: -30px
