--- a/lokovei-ERP/asset/stylesheets/print_order.css
+++ b/lokovei-ERP/asset/stylesheets/print_order.css
@@ -195,3 +195,13 @@ img {
   margin-left: 1100px;
   margin-top: 515px;
 }
+/* line 126, ../sass/print_order.sass */
+.mask .text-24 {
+  margin-left: 270px;
+  margin-top: 570px;
+}
+/* line 129, ../sass/print_order.sass */
+.mask .text-25 {
+  margin-left: 1180px;
+  margin-top: -30px;
+}
