use cName not cWho

--- a/lokovei-ERP/views/queue_factory.jade
+++ b/lokovei-ERP/views/queue_factory.jade
@@ -68,7 +68,7 @@ block content
                     - if( job.order.outputDate )
                       = '出貨：' + job.order.outputDate
                       br
-                      = '經銷商：' + job.order.cWho
+                      = '經銷商：' + job.order.cName
                     - else
                       = '預備製作用庫存'
                     br
