刪除功能完成一半了

--- a/lokovei-ERP/asset/sass/queue_factory.sass
+++ b/lokovei-ERP/asset/sass/queue_factory.sass
@@ -64,3 +64,18 @@
   //max-width: 200px
   bottom: 0px
   left: 0px
+
+#deleteJobTable
+  z-index: 99
+  position: fixed
+  right: 00px
+  bottom: 0px
+  width: 100px
+  height: 100px
+  opacity: 0.5
+  & .job
+    opacity: 0
+  & span
+    position: absolute
+    top: 15px
+    left: 30px
