--- a/lokovei-ERP/asset/stylesheets/queue_factory.css
+++ b/lokovei-ERP/asset/stylesheets/queue_factory.css
@@ -80,3 +80,24 @@
   bottom: 0px;
   left: 0px;
 }
+
+/* line 68, ../sass/queue_factory.sass */
+#deleteJobTable {
+  z-index: 99;
+  position: fixed;
+  right: 0px;
+  bottom: 0px;
+  width: 100px;
+  height: 100px;
+  opacity: 0.5;
+}
+/* line 76, ../sass/queue_factory.sass */
+#deleteJobTable .job {
+  opacity: 0;
+}
+/* line 78, ../sass/queue_factory.sass */
+#deleteJobTable span {
+  position: absolute;
+  top: 15px;
+  left: 30px;
+}
