--- a/lokovei-ERP/views/queue_factory.jade
+++ b/lokovei-ERP/views/queue_factory.jade
@@ -12,6 +12,10 @@ block content
     div(data-ctrl="battery")
     div(data-ctrl="text" placeHolder="備註")
 
+  #deleteJobTable.thumbnail.lineName.star(ondragover="allowDrop(event)" ondrop="drop(event)")
+    center.star
+      span.star.glyphicon.glyphicon-trash(aria-hidden='true' style="font-size:3em; margin-top:22px; opacity:0.5;")
+      
   .screen
     .wrapper
       - var lineCount = lineData.length;
